finish swag with existing functions
